CSS fixed up some weird single pixel spacing issues

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -535,9 +535,11 @@ ul.tags {
 		width: 50%;
 		position: relative;
 		border: 0;
-		line-height: 0;
 		background-color: black;
 		height: 100%;
+		line-height: 0;
+		font-size: 0;
+		margin-bottom: -2px;
 		@media (min-width: 768px) {width: calc(100%/4);}
 		@media (min-width: 1400px) {width: calc(100%/5);}
 		@include transition( all 0.25s);
@@ -549,7 +551,7 @@ ul.tags {
 			z-index: 9;
 			color: white;
 			line-height: 1em;
-			font-size: 200%;
+			font-size: 35px;
 			margin-right: 0.5em;
 			font-weight: 900;
 		}
@@ -557,6 +559,8 @@ ul.tags {
 			width: 100.5%;
 			height: 100%;
 			opacity: 1;
+			line-height: 0;
+			font-size: 0;
 		}
 	}
 	.fl-thumb:hover img {
